--- a/mern/projfrontend/src/styles.css
+++ b/mern/projfrontend/src/styles.css
@@ -7,3 +7,46 @@
 body {
   background: #343a40;
 }
+.ex1 {
+  min-height: 23vh;
+}
+
+.App {
+  text-align: center;
+  background-color: #343a40;
+  display: initial;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+#loading {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  position: absolute;
+  border: 1px solid rgb(218, 231, 26);
+  animation: up 1s;
+  animation-iteration-count: infinite;
+  transition: 2s;
+  border-bottom: none;
+  border-right: none;
+  animation-timing-function: linear;
+  margin-left: -70px;
+  margin-top: -70px;
+  left: 50%;
+  top: 50%;
+}
+
+@keyframes up {
+  from {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
